--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   cupertino_icons: ^1.0.6
 
   firebase_core: ^2.27.2
+  firebase_crashlytics: ^3.4.20
 
   flutter:
     sdk: flutter
