launch.jsonに環境毎の起動コマンドを追加

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,37 @@
             "request": "launch",
             "type": "dart",
             "program": "lib/firebase_crashlytics/main.dart",
-            "flutterMode": "debug"
+            "flutterMode": "debug",
+            "args": [
+                "--dart-define-from-file=dart_defines/dev.env"
+            ]
+        },
+        {
+            "name": "Debug dev",
+            "request": "launch",
+            "type": "dart",
+            "flutterMode": "debug",
+            "args": [
+                "--dart-define-from-file=dart_defines/dev.env"
+            ]
+        },
+        {
+            "name": "Debug stg",
+            "request": "launch",
+            "type": "dart",
+            "flutterMode": "debug",
+            "args": [
+                "--dart-define-from-file=dart_defines/stg.env"
+            ]
+        },
+        {
+            "name": "Debug prod",
+            "request": "launch",
+            "type": "dart",
+            "flutterMode": "debug",
+            "args": [
+                "--dart-define-from-file=dart_defines/prod.env"
+            ]
         }
     ]
 }
