Androidの設定追加

--- a/dart_defines/dev.env
+++ b/dart_defines/dev.env
@@ -1,4 +1,4 @@
 flavor="dev"
-appName="FAT dev"
-appId="jp.co.altive.fat.dev"
+appName="flutter_trial dev"
+appId="com.example.flutter_trial.dev"
 googleReversedClientId="com.googleusercontent.apps.0123456789-xxxxxxxxxxxxxxxx"
