--- a/dart_defines/stg.env
+++ b/dart_defines/stg.env
@@ -1,4 +1,4 @@
 flavor="stg"
-appName="FAT stg"
-appId="jp.co.altive.fat.stg"
+appName="flutter_trial stg"
+appId="com.example.flutter_trial.stg"
 googleReversedClientId="com.googleusercontent.apps.0123456789-xxxxxxxxxxxxxxxx"
