--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -22,6 +22,30 @@ if (flutterVersionName == null) {
     flutterVersionName = '1.0'
 }
 
+// dart-define を入れる変数を宣言
+def dartDefines = [:];
+if (project.hasProperty('dart-defines')) {
+    // カンマ区切りかつ Base64 でエンコードされている dart-defines をデコードして変数に格納
+    dartDefines = dartDefines + project.property('dart-defines')
+        .split(',')
+        .collectEntries { entry ->
+            def pair = new String(entry.decodeBase64(), 'UTF-8').split('=')
+            [(pair.first()): pair.last()]
+        }
+}
+
+// 環境毎に準備した google-services.json をコピーするタスクを定義
+task selectGoogleServicesJson(type: Copy) {
+    from "src/${dartDefines.flavor}/google-services.json"
+    into './'
+}
+
+tasks.whenTaskAdded { task ->
+    if (task.name == 'processDebugGoogleServices' || task.name == 'processReleaseGoogleServices') {
+        task.dependsOn selectGoogleServicesJson
+    }
+}
+
 android {
     namespace "com.example.flutter_trial"
     compileSdk flutter.compileSdkVersion
@@ -42,13 +66,16 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.flutter_trial"
+        // dart-define の値を設定
+        applicationId "${dartDefines.appId}"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion flutter.minSdkVersion
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        // dart-define の値を設定
+        resValue "string", "app_name", "${dartDefines.appName}"
     }
 
     buildTypes {
