--- a/dart_defines/prod.env
+++ b/dart_defines/prod.env
@@ -1,4 +1,4 @@
 flavor="prod"
-appName="FAT"
-appId="jp.co.altive.fat"
+appName="flutter_trial"
+appId="com.example.flutter_trial"
 googleReversedClientId="com.googleusercontent.apps.0123456789-xxxxxxxxxxxxxxxx"
