--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,5 @@ app.*.map.json
 android/app/google-services.json
 ios/Runner/GoogleService-Info.plist
 lib/firebase_options.dart
+
+ios/Flutter/Dart-Defines.xcconfig
