--- a/dart_defines/stg.env
+++ b/dart_defines/stg.env
@@ -1,4 +1,5 @@
 flavor="stg"
 appName="flutter_trial stg"
 appId="com.example.flutter_trial.stg"
+appIdiOS="com.example.flutterTrial.stg"
 googleReversedClientId="com.googleusercontent.apps.0123456789-xxxxxxxxxxxxxxxx"
