--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,19 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_riverpod: ^2.5.1
+  package_info_plus: ^6.0.0
+  riverpod_annotation: ^2.3.5
 
 dev_dependencies:
+  build_runner: ^2.4.9
+  custom_lint: ^0.6.4
+
   flutter_test:
     sdk: flutter
+
+  riverpod_generator: ^2.4.0
+  riverpod_lint: ^2.3.10
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
