firebase_app_id_file.jsonも環境毎に切り替えるよう

--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ android/app/google-services.json
 ios/Runner/GoogleService-Info.plist
 
 ios/Flutter/Dart-Defines.xcconfig
+ios/firebase_app_id_file.json
