動作確認できた状態

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -22,6 +22,16 @@
             ]
         },
         {
+            "name": "DeepLink",
+            "request": "launch",
+            "type": "dart",
+            "program": "lib/deep_link/main.dart",
+            "flutterMode": "debug",
+            "args": [
+                "--dart-define-from-file=dart_defines/dev.env"
+            ]
+        },
+        {
             "name": "Debug dev",
             "request": "launch",
             "type": "dart",
