--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   package_info_plus: ^6.0.0
   permission_handler: ^11.3.1
   riverpod_annotation: ^2.3.5
+  uni_links: ^0.5.1
 
 dev_dependencies:
   build_runner: ^2.4.9
