go と push の違いを確認

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -32,6 +32,16 @@
             ]
         },
         {
+            "name": "router",
+            "request": "launch",
+            "type": "dart",
+            "program": "lib/router/main.dart",
+            "flutterMode": "debug",
+            "args": [
+                "--dart-define-from-file=dart_defines/dev.env"
+            ]
+        },
+        {
             "name": "Debug dev",
             "request": "launch",
             "type": "dart",
