--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
     sdk: flutter
 
   flutter_riverpod: ^2.5.1
+  go_router: ^13.2.4
   package_info_plus: ^6.0.0
   permission_handler: ^11.3.1
   riverpod_annotation: ^2.3.5
@@ -51,6 +52,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  go_router_builder: ^2.5.1
   riverpod_generator: ^2.4.0
   riverpod_lint: ^2.3.10
 
