--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
 
   flutter_riverpod: ^2.5.1
   go_router: ^13.2.4
+  http: ^1.2.1
   package_info_plus: ^6.0.0
   permission_handler: ^11.3.1
   riverpod_annotation: ^2.3.5
