キャッシュディレクトリに保存

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -62,6 +62,16 @@
             ]
         },
         {
+            "name": "save json",
+            "request": "launch",
+            "type": "dart",
+            "program": "lib/save_json/main.dart",
+            "flutterMode": "debug",
+            "args": [
+                "--dart-define-from-file=dart_defines/dev.env"
+            ]
+        },
+        {
             "name": "Debug dev",
             "request": "launch",
             "type": "dart",
