--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,11 @@ dependencies:
     sdk: flutter
 
   flutter_riverpod: ^2.5.1
+  freezed_annotation: ^2.4.1
   go_router: ^13.2.4
   http: ^1.2.1
   package_info_plus: ^6.0.0
+  path_provider: ^2.1.3
   permission_handler: ^11.3.1
   riverpod_annotation: ^2.3.5
   uni_links: ^0.5.1
@@ -53,7 +55,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  freezed: ^2.5.2
   go_router_builder: ^2.5.1
+  json_serializable: ^6.7.1
   riverpod_generator: ^2.4.0
   riverpod_lint: ^2.3.10
 
